Convert service tests to use overhauled classes.